fixed width of modal on mobile

--- a/components/OurServices/styles.module.scss
+++ b/components/OurServices/styles.module.scss
@@ -77,6 +77,10 @@
   padding: 16px;
   position: relative;
   z-index: 0;
+
+  @media (max-width: 768px) {
+    width: auto;
+  }
   
   .closeButton {
     position: absolute;
